--- a/css/form_style.css
+++ b/css/form_style.css
@@ -60,6 +60,7 @@ form {
     align-self: flex-end;
     justify-self: flex-end;
     width: 15%;
+    min-width: 150px;
     margin-top: 1rem;
     border-radius: 50px;
     overflow: hidden;
