--- a/css/global_style.css
+++ b/css/global_style.css
@@ -4,8 +4,10 @@
     --fontTitle: 'Dancing Script', cursive;
     --fontDefault: 'Outfit', sans-serif;
     --colorPrim: #41a4e6;
+    --colorAccent: #e9b555;
     --colorBtn: #ebebeb;
     --colorSearchB: #fff;
+    --colorBGDark: #28273d;
 }
 
 *,
@@ -23,8 +25,10 @@ body {
 
 h1,
 h2,
-h3 {
-   font-weight: normal; 
+h3,
+p {
+   font-weight: normal;
+   margin: 0;
 }
 
 a {
@@ -48,6 +52,10 @@ a {
     display: none;
 }
 
+.bg-dark {
+    background-color: var(--colorBGDark);
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -66,11 +74,21 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 2rem;
 }
 
 footer {
     width: 100%;
-    height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
+}
+
+footer a {
+    color: #fff;
+    background-color: var(--colorAccent);
+    padding: 0.4rem 2rem;
+    border-radius: 50px;
 }
 
 .header-links {
@@ -122,7 +140,7 @@ footer {
 
 .label-search {
     color: #fff;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .search-section {
@@ -220,3 +238,4 @@ footer {
     transform: scaleY(1);
     height: auto;
 }
+
