--- a/css/index_style.css
+++ b/css/index_style.css
@@ -23,6 +23,15 @@ section h2 {
     border-radius: 50px;
     padding: 1rem 5rem;
     color: #fff;
+    transition: transform 200ms;
+}
+
+.btn-link:hover {
+    transform: scale(1.05);
+}
+
+.btn-link:active {
+    transform: scale(0.95);
 }
 
 footer {
