--- a/css/global_style.css
+++ b/css/global_style.css
@@ -62,6 +62,10 @@ a {
     background-color: var(--colorBGDark);
 }
 
+.validate-color {
+    color: var(--colorValidate);
+}
+
 ul {
     list-style: none;
     margin: 0;
