Icones social plus grandes

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -117,7 +117,10 @@ footer {
 
 .menu-link {
     margin: 0 0.4rem;
-    font-size: 1.4rem;
+}
+
+.menu-link a {
+    font-size: 1.6rem;
 }
 
 .fa-facebook {
