--- a/css/global_style.css
+++ b/css/global_style.css
@@ -93,7 +93,7 @@ footer {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    padding: 1.6rem;
+    padding-right: 1.6rem;
 }
 
 .header-links {
